--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,8 @@
 <div>
-  <h1 class="font-bold text-4xl text-center">Find how to resolve your error<br />in Rails (and Ruby)</h1>
+  <h1 class="font-bold text-4xl text-center mb-8 text-white">Find how to resolve your error<br />in Rails (and Ruby)</h1>
+
+  <form action="/">
+    <input type="text" name="query" id="error_query" class="block w-full pl-10 pr-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none">
+  </form>
+
 </div>
