--- a/app/views/layouts/action_text/contents/_content.html.erb
+++ b/app/views/layouts/action_text/contents/_content.html.erb
@@ -1,3 +1,5 @@
-<div class="trix-content">
-  <%= yield -%>
-</div>
+<pre class="text-white font-code flex">
+  <code>
+    <%= yield -%>
+  </code>
+</pre>
