--- a/app/views/errors/new.html.erb
+++ b/app/views/errors/new.html.erb
@@ -1,4 +1,11 @@
-<div>
-  <h1 class="font-bold text-4xl">Errors#new</h1>
-  <p>Find me in app/views/errors/new.html.erb</p>
+<div class="text-white">
+  <h1 class="text-center font-bold text-4xl">Add a new resolver</h1>
+  <%= simple_form_for @error, data: { turbo: false } do |f| %>
+    <%= f.input :title, wrapper_html: { class: "mt-8" }, label_html: { class: "text-lg" } %>
+    <%= f.input :details, label_html: { class: "text-lg" } %>
+    <%= f.input :solution, as: :rich_text_area, label_html: { class: "text-lg" } %>
+    <%= f.submit "Submit", class: "bg-white rounded text-black px-12 py-2 cursor-pointer hover:bg-gray-300 transition-all duration-200" %>
+  <% end %>
 </div>
+
+<p class="mt-2 text-red-500 text-sm italic"></p>
