--- a/app/assets/stylesheets/components/input.css
+++ b/app/assets/stylesheets/components/input.css
@@ -1,7 +1,7 @@
 input#error_query {
-  background-image: url("https://cdn-icons.flaticon.com/png/512/3031/premium/3031293.png?token=exp=1645591288~hmac=c5918de04927b6ed0147e974215756c5");
-  background-size: 16px;
+  background-image: url("https://i.pinimg.com/474x/b9/67/82/b96782d0ab0ea492dabcf4a0f00698d2.jpg");
+  background-size: 24px;
   background-repeat: no-repeat;
-  background-position-y: 10px;
+  background-position-y: 6px;
   background-position-x: 12px;
 }
