--- a/app/views/errors/_card.html.erb
+++ b/app/views/errors/_card.html.erb
@@ -1,9 +1,9 @@
-<div class="rounded bg-gray-custom p-8 mx-36">
+<div class="rounded bg-gray-custom p-8">
   <h1 class="text-white font-bold text-4xl">
     <code class="font-code"><%= error.title %></code>
   </h1>
 
-  <div class="mt-8">
+  <div class="my-6">
     <h2 class="text-white font-bold text-2xl">Details</h2>
     <p class="text-white">
       <code class="font-code"><%= error.details %></code>
