--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -1,3 +1,4 @@
-<div>
+<div class="lg:mx-36">
+  <%= link_to "Back", root_path, class: "text-gray-light hover:text-gray-200 transition-all duration-200" %>
   <%= render partial: "card", locals: { error: @error } %>
 </div>
