--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="bg-black">
+  <body class="bg-black font-sans">
     <main class="container mx-auto mt-28 px-5 flex justify-center">
       <%= yield %>
     </main>
