--- a/app/views/errors/_card.html.erb
+++ b/app/views/errors/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="rounded bg-gray-custom p-8">
+<div class="rounded bg-gray-custom p-8 w-10/12">
   <h1 class="text-white font-bold text-4xl">
     <code class="font-code"><%= error.title %></code>
   </h1>
