standardize padding & add navbar

--- a/app/views/errors/_cards.html.erb
+++ b/app/views/errors/_cards.html.erb
@@ -1,4 +1,4 @@
-<div class="lg:mx-36">
+<div>
   <% @errors.each do |error| %>
     <div class="rounded bg-gray-custom p-8 mb-8">
       <h1 class="text-white font-bold text-4xl">
