--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,8 @@
   </head>
 
   <body class="bg-black font-sans">
-    <main class="container mx-auto mt-28 px-5 flex justify-center">
+    <%= render partial: "shared/navbar" %>
+    <main class="container mx-auto mt-28 px-80 flex justify-center">
       <%= yield %>
     </main>
   </body>
