--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,5 +19,6 @@
     <main class="container mx-auto mt-28 px-80 flex justify-center">
       <%= yield %>
     </main>
+    <% render partial: "shared/flashes" %>
   </body>
 </html>
