--- a/app/views/errors/_cards.html.erb
+++ b/app/views/errors/_cards.html.erb
@@ -16,8 +16,7 @@
 
       <div>
         <h3 class="text-white font-bold text-xl">Solution</h3>
-        <div class="text-white font-code rounded" data-controller="syntax-highlighter">
-          <%= error.solution_converted.html_safe %>
+        <div class="text-white font-code rounded" data-controller="syntax-highlighter" data-syntax-highlighter-content-value="<%= error.resolver %>">
         </div>
       </div>
     </div>
