block new error route

--- a/app/views/errors/new.html.erb
+++ b/app/views/errors/new.html.erb
@@ -1,4 +1,4 @@
-<div class="text-white w-full">
+<div class="text-white w-full mb-24">
   <h1 class="text-center font-bold text-4xl">Add a new resolver</h1>
   <%= simple_form_for @error, data: { turbo: false } do |f| %>
     <%= f.input :title, wrapper_html: { class: "mt-8" }, label_html: { class: "text-lg" } %>
