--- a/app/views/errors/_card.html.erb
+++ b/app/views/errors/_card.html.erb
@@ -1,6 +1,9 @@
 <div class="rounded bg-gray-custom p-8">
   <h1 class="text-white font-bold text-4xl">
-    <code class="font-code"><%= error.title %></code>
+    <div class="flex justify-between items-center">
+      <code class="font-code"><%= error.title %></code>
+      <p class="text-base font-normal"><%= error.votes %>👍</p>
+    </div>
   </h1>
 
   <div class="my-6">
