fix contribute link

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
 <nav class="bg-gray-custom text-gray-light py-4 px-[22rem] flex justify-between">
   <%= link_to "Home", root_path %>
-  <%= link_to "Contribute", "#" %>
+  <%= link_to "Contribute", "https://github.com/rayhanw/resolver/issues/new", target: :_blank %>
 </nav>
