add flex onupvote

--- a/app/views/errors/_card.html.erb
+++ b/app/views/errors/_card.html.erb
@@ -2,7 +2,7 @@
   <h1 class="text-white font-bold text-4xl">
     <div class="flex justify-between items-center">
       <code class="font-code"><%= error.title %></code>
-      <div class="text-base font-normal">
+      <div class="text-base font-normal flex">
         <span class="mr-1"><%= error.votes %></span>
         <span>👍</span>
       </div>
