--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -1,5 +1,6 @@
 <title><%= meta_title %></title>
 <meta name="description" content="<%= meta_description %>">
+<%= favicon_link_tag asset_path("favicon.ico") %>
 
 <!-- Facebook Open Graph data -->
 <meta property="og:title" content="<%= meta_title %>" />
