--- a/app/views/shared/_meta.html.erb
+++ b/app/views/shared/_meta.html.erb
@@ -1,5 +1,6 @@
 <title><%= meta_title %></title>
 <meta name="description" content="<%= meta_description %>">
+<meta name="theme-color" content="#3C3C3C">
 <%= favicon_link_tag asset_path("favicon.ico") %>
 
 <!-- Facebook Open Graph data -->
