--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <%= render partial: "shared/meta" %>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -16,7 +16,7 @@
 
   <body class="bg-black font-sans">
     <%= render partial: "shared/navbar" %>
-    <main class="container mx-auto mt-28 px-80 flex justify-center">
+    <main class="container mx-auto mt-28 px-8 md:px-40 lg:px-80 flex justify-center">
       <%= yield %>
     </main>
     <% render partial: "shared/flashes" %>
