--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div>
+<div class="w-full">
   <h1 class="font-bold text-4xl text-center mb-8 text-white">Find how to resolve your error<br />in Rails (and Ruby)</h1>
 
   <form action="/" class="mb-8">
