--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -1,7 +1,7 @@
 <div class="w-full">
   <%= link_to "Back", root_path, class: "text-xl text-gray-light underline hover:text-gray-200 transition-all duration-200" %>
   <%= render partial: "card", locals: { error: @error } %>
-  <p class="text-white mt-4">
+  <p class="text-white mt-4 mb-8">
     Found this helpful?
     <%= link_to "Mark this resolver as helpful for everyone else to see", upvote_error_path(@error), class: "text-gray-light underline hover:text-gray-200 transition-all duration-200", data: { 'turbo-method': 'patch' } %>
   </p>
