--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,6 @@
       <%= yield %>
     </main>
     <% render partial: "shared/flashes" %>
+    <%= render partial: "shared/footer" %>
   </body>
 </html>
