--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,7 +6,7 @@
   </form>
 
   <% if @errors.empty? %>
-    <h3 class="font-bold text-2xl text-white">
+    <h3 class="font-bold text-2xl text-white mb-8">
       Don't see your error listed? (<%= link_to "contribute here", "https://github.com/rayhanw/resolver/issues/news", target: :_blank, class: "underline hover:text-gray-300 transition-all duration-200" %>)
     </h3>
   <% else %>
