--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,4 @@
-<div class="w-full text-white pb-8">
+<div class="w-full text-white mb-28">
   <div class="mb-16">
     <h1 class="font-bold text-4xl text-center mb-8">This app was created primarily for students/new Rails (or Ruby) developers</h1>
     <p class="text-white">
