--- a/app/assets/stylesheets/components/preview.css
+++ b/app/assets/stylesheets/components/preview.css
@@ -1,23 +1,32 @@
 #preview h1 {
-  font-size: 3.75rem;
+	font-size: 3.75rem;
 }
 
 #preview h2 {
-  font-size: 3rem;
+	font-size: 3rem;
 }
 
 #preview h3 {
-  font-size: 2.25rem;
+	font-size: 2.25rem;
 }
 
 #preview h4 {
-  font-size: 1.875rem;
+	font-size: 1.875rem;
 }
 
 #preview h5 {
-  font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 
 #preview h6 {
-  font-size: 1.25rem;
+	font-size: 1.25rem;
+}
+
+[data-controller="syntax-highlighter"] h1,
+[data-controller="syntax-highlighter"] h2,
+[data-controller="syntax-highlighter"] h3,
+[data-controller="syntax-highlighter"] h4,
+[data-controller="syntax-highlighter"] h5,
+[data-controller="syntax-highlighter"] h6 {
+	font-style: italic;
 }
