--- a/app/views/errors/_card.html.erb
+++ b/app/views/errors/_card.html.erb
@@ -1,6 +1,6 @@
 <div class="rounded bg-gray-custom p-8">
   <h1 class="text-white font-bold text-4xl">
-    <div class="flex justify-between items-center">
+    <div class="flex justify-between items-start">
       <code class="font-code"><%= error.title %></code>
       <div class="text-base font-normal flex">
         <span class="mr-1"><%= error.votes %></span>
