--- a/app/views/errors/_cards.html.erb
+++ b/app/views/errors/_cards.html.erb
@@ -22,7 +22,7 @@
 
       <div>
         <h3 class="text-white font-bold text-xl">Solution</h3>
-        <div class="text-white font-code rounded" data-controller="syntax-highlighter" data-syntax-highlighter-content-value="<%= error.resolver %>">
+        <div class="text-white font-code rounded text-sm" data-controller="syntax-highlighter" data-syntax-highlighter-content-value="<%= error.resolver %>">
         </div>
       </div>
     </div>
