--- a/app/views/api/v1/errors/index.html.erb
+++ b/app/views/api/v1/errors/index.html.erb
@@ -1,3 +1,45 @@
-<div>
-  <h1>errors#index</h1>
+<div class="text-white text-left w-full">
+  <h1 class="font-bold text-4xl mb-8">errors#index</h1>
+
+  <section>
+    <div>
+      <p><i>errors#index</i> is the endpoint show a list of all errors.</p>
+    </div>
+    <div class="mt-4">
+      <h2 class="text-white font-bold text-2xl">Headers (required)</h2>
+      <ul class="font-code">
+        <li>
+          <span><code>Accept</code>:</span>
+          <span><code>application/json</code></span>
+        </li>
+      </ul>
+    </div>
+    <div class="mt-4">
+      <h2 class="text-white font-bold text-2xl">Base URL</h2>
+      <code class="font-code"><%= request.base_url %></code>
+    </div>
+    <div class="mt-4">
+      <h2 class="text-white font-bold text-2xl">Endpoint</h2>
+      <code class="font-code">/api/v1/errors</code>
+    </div>
+    <div class="mt-4">
+      <h2 class="text-white font-bold text-2xl">Response</h2>
+      <pre>
+        <code class="language-json hljs">[
+  {
+    "id": 1,
+    "title": "undefined method nil:NilClass",
+    "details": "Happens on ...",
+    "resolver": "Solution goes here"
+  },
+  {
+    "id": 2,
+    "title": "Heroku ...",
+    "details": "Happens on ...",
+    "resolver": "Solution goes here"
+  }
+]</code>
+      </pre>
+    </div>
+  </section>
 </div>
