--- a/app/views/api/v1/errors/show_api.html.erb
+++ b/app/views/api/v1/errors/show_api.html.erb
@@ -25,12 +25,7 @@
     <div class="mt-4">
       <h2 class="text-white font-bold text-2xl">Response</h2>
       <pre>
-        <code class="language-json hljs">{
-  "id": 1,
-  "title": "Heroku ...",
-  "details": "Happens on ...",
-  "resolver": "Solution goes here"
-}</code>
+        <code data-controller="syntax-highlighter" data-syntax-highlighter-content-value="<%= @content %>"></code>
       </pre>
     </div>
   </section>
