separate api syntax highlighter controller

--- a/app/views/api/v1/errors/index.html.erb
+++ b/app/views/api/v1/errors/index.html.erb
@@ -25,7 +25,7 @@
     <div class="mt-4">
       <h2 class="text-white font-bold text-2xl">Response</h2>
       <pre>
-        <code data-controller="syntax-highlighter" data-syntax-highlighter-content-value="<%= @content %>"></code>
+        <code data-controller="api-syntax-highlighter" data-api-syntax-highlighter-content-value="<%= @content %>"></code>
       </pre>
     </div>
   </section>
