--- a/app/views/api/v1/errors/index.html.erb
+++ b/app/views/api/v1/errors/index.html.erb
@@ -3,7 +3,7 @@
 
   <section>
     <div>
-      <p><i>errors#index</i> is the endpoint show a list of all errors.</p>
+      <p><i>errors#index</i> is the endpoint to show a list of all errors.</p>
     </div>
     <div class="mt-4">
       <h2 class="text-white font-bold text-2xl">Headers (required)</h2>
