--- a/app/views/api/v1/errors/show_api.html.erb
+++ b/app/views/api/v1/errors/show_api.html.erb
@@ -1,5 +1,5 @@
 <div class="text-white text-left w-full">
-  <h1 class="font-bold text-4xl mb-8">errors#show</h1>
+  <h1 class="font-bold text-4xl mb-8 mt-24">errors#show</h1>
 
   <section>
     <div>
