--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-gray-custom text-gray-light py-4 px-8 md:px-40 lg:px-96 xl:px-[32rem] flex justify-between">
+<footer class="bg-gray-custom text-gray-light py-4 px-8 md:px-40 lg:px-96 xl:px-[32rem] flex justify-between mt-28">
   <%= link_to "Codebase", links[:codebase], target: :_blank, class: "text-gray-light underline hover:text-gray-200 transition-all duration-200" %>
   <%= link_to "API", docs_path, class: "text-gray-light underline hover:text-gray-200 transition-all duration-200" %>
   <%= link_to "About", about_path, class: "text-gray-light underline hover:text-gray-200 transition-all duration-200" %>
