--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,11 +5,19 @@
     <input type="text" name="query" id="error_query" value="<%= params[:query] %>" class="block w-full pl-10 pr-3 py-1.5 text-base font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none" placeholder="undefined method ...">
   </form>
 
-  <% if @errors.empty? %>
-    <h3 class="font-bold text-2xl text-white mb-8">
-      Don't see your error listed? (<%= link_to "contribute here", "https://github.com/rayhanw/resolver/issues/news", target: :_blank, class: "underline hover:text-gray-300 transition-all duration-200" %>)
-    </h3>
-  <% else %>
-    <%= render partial: "errors/cards", locals: { errors: @errors } %>
-  <% end %>
+  <div data-controller="infinite-scroll" data-infinite-scroll-offset-value="<%= @offset %>">
+    <div data-infinite-scroll-target="list">
+      <% if @errors.empty? %>
+        <h3 class="font-bold text-2xl text-white mb-8">
+          Don't see your error listed? (<%= link_to "contribute here", "https://github.com/rayhanw/resolver/issues/news", target: :_blank, class: "underline hover:text-gray-300 transition-all duration-200" %>)
+        </h3>
+        <p class="italic text-gray-light">No more resolvers to load</p>
+      <% else %>
+        <%= render partial: "errors/cards", locals: { errors: @errors } %>
+      <% end %>
+    </div>
+    <div class="flex justify-center">
+      <button class="text-gray-light underline hover:text-gray-200 transition-all duration-200" data-action="click->infinite-scroll#loadMore">Load more</button>
+    </div>
+  </div>
 </div>
