--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,19 +14,25 @@
  *= require_self
  */
 
+/* Config */
 @import "fonts.css";
-@import "components/index.css";
+
+/* Components */
+@import "components/input.css";
+@import "components/preview.css";
+
+/* Themes */
 @import "themes/index.css";
 
 code {
-	border-radius: 0.25em;
+  border-radius: 0.25em;
 }
 
 pre {
-	white-space: pre-wrap;
-	word-break: keep-all;
+  white-space: pre-wrap;
+  word-break: keep-all;
 }
 
 pre * {
-	font-family: "Fira Code" !important;
+  font-family: "Fira Code" !important;
 }
