--- a/app/views/errors/_card.html.erb
+++ b/app/views/errors/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="rounded bg-gray-custom p-8 mb-8">
+<div class="rounded bg-gray-custom p-8 mb-8" id="error-<%= error.id %>" data-infinite-scroll-target="card">
   <h1 class="text-white font-bold text-4xl">
     <div class="flex justify-between items-start">
       <%= link_to error_path(error), class: "hover:text-gray-300 transition-all duration-200" do %>
