--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,9 +1,9 @@
-<nav class="bg-gray-custom text-gray-light py-4 px-8 md:px-40 lg:px-96 xl:px-[32rem] flex justify-between">
-  <%= link_to root_path, class: "text-lg text-gray-light underline hover:text-gray-200 transition-all duration-200" do %>
+<nav class="bg-gray-200 dark:bg-gray-custom text-gray-light py-4 px-8 md:px-40 lg:px-96 xl:px-[32rem] flex justify-between">
+  <%= link_to root_path, class: "text-lg text-gray-custom dark:text-gray-light hover:text-gray-500 dark:hover:text-gray-200 underline transition-all duration-200" do %>
     <%= image_tag "icon.png", alt: "Resolver icon - Home page", height: 32, width: 32, class: "hover:opacity-75 transition-all duration-200" %>
   <% end %>
   <% if user_signed_in? && current_user.admin? %>
-    <%= link_to "Add error", new_error_path, class: "text-lg text-gray-light underline hover:text-gray-200 transition-all duration-200" %>
+    <%= link_to "Add error", new_error_path, class: "text-lg text-gray-custom dark:text-gray-light hover:text-gray-500 dark:hover:text-gray-200 underline transition-all duration-200" %>
   <% end %>
-  <%= link_to "Contribute", links[:error], target: :_blank, class: "text-lg text-gray-light underline hover:text-gray-200 transition-all duration-200" %>
+  <%= link_to "Contribute", links[:error], target: :_blank, class: "text-lg text-gray-custom dark:text-gray-light hover:text-gray-500 dark:hover:text-gray-200 underline transition-all duration-200" %>
 </nav>
