--- a/app/views/errors/_card.html.erb
+++ b/app/views/errors/_card.html.erb
@@ -1,7 +1,7 @@
-<div class="rounded bg-gray-custom p-8 mb-8" id="error-<%= error.id %>" data-identifier="card" data-infinite-scroll-target="card">
-  <h1 class="text-white font-bold text-4xl">
+<div class="rounded bg-gray-200 dark:bg-gray-custom p-8 mb-8" id="error-<%= error.id %>" data-identifier="card" data-infinite-scroll-target="card">
+  <h1 class="text-gray-custom dark:text-white font-bold text-4xl">
     <div class="flex justify-between items-start">
-      <%= link_to error_path(error), class: "hover:text-gray-300 transition-all duration-200" do %>
+      <%= link_to error_path(error), class: "hover:text-gray-500 dark:hover:text-gray-300 transition-all duration-200" do %>
         <code class="font-code"><%= error.title %></code>
       <% end %>
       <div class="text-base font-normal flex">
@@ -12,15 +12,15 @@
   </h1>
 
   <div class="my-6">
-    <h2 class="text-white font-bold text-2xl">Details</h2>
-    <p class="text-white">
+    <h2 class="text-gray-custom dark:text-white font-bold text-2xl">Details</h2>
+    <p class="text-gray-custom dark:text-white">
       <code class="font-code"><%= error.details %></code>
     </p>
   </div>
 
   <div>
-    <h3 class="text-white font-bold text-xl">Solution</h3>
-    <div class="text-white font-code rounded text-sm" data-controller="syntax-highlighter" data-syntax-highlighter-content-value="<%= error.resolver %>">
+    <h3 class="text-gray-custom dark:text-white font-bold text-xl">Solution</h3>
+    <div class="text-gray-custom dark:text-white font-code rounded text-sm" data-controller="syntax-highlighter" data-syntax-highlighter-content-value="<%= error.resolver %>">
     </div>
   </div>
 </div>
