--- a/app/views/pages/docs.html.erb
+++ b/app/views/pages/docs.html.erb
@@ -1,10 +1,10 @@
 <div class="w-full">
-  <h1 class="font-bold text-4xl text-center mb-8 text-white">API Documentation</h1>
+  <h1 class="font-bold text-4xl text-center mb-8 text-gray-custom dark:text-white">API Documentation</h1>
 
   <section class="text-white mb-28">
     <ul>
       <% @routes.each do |route| %>
-        <li><%= link_to route[:text], route[:url], class: "text-gray-light underline hover:text-gray-200 transition-all duration-200" %> <span class="font-code">-></span> <%= route[:details] %></li>
+        <li class="text-gray-custom dark:text-white"><%= link_to route[:text], route[:url], class: "text-gray-custom dark:text-gray-light hover:text-gray-500 dark:hover:text-gray-200 underline transition-all duration-200" %> <span class="font-code">-></span> <%= route[:details] %></li>
       <% end %>
     </ul>
   </section>
