--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -1,5 +1,8 @@
 <div class="w-full">
-  <%= link_to "Back", root_path, class: "text-xl text-gray-custom hover:text-gray-500 dark:text-gray-light underline dark:hover:text-gray-200 transition-all duration-200" %>
+  <div class="flex justify-between items-center">
+    <%= link_to "Back", root_path, class: "text-xl text-gray-custom hover:text-gray-500 dark:text-gray-light underline dark:hover:text-gray-200 transition-all duration-200" %>
+    <%= link_to "Edit", edit_error_path(@error), class: "text-xl text-gray-custom hover:text-gray-500 dark:text-gray-light underline dark:hover:text-gray-200 transition-all duration-200" %>
+  </div>
   <%= render partial: "card", locals: { error: @error } %>
   <p class="text-gray-custom dark:text-white mt-4 mb-8">
     Found this helpful?
