--- a/app/views/errors/show.html.erb
+++ b/app/views/errors/show.html.erb
@@ -1,7 +1,9 @@
 <div class="w-full">
   <div class="flex justify-between items-center">
     <%= link_to "Back", root_path, class: "text-xl text-gray-custom hover:text-gray-500 dark:text-gray-light underline dark:hover:text-gray-200 transition-all duration-200" %>
-    <%= link_to "Edit", edit_error_path(@error), class: "text-xl text-gray-custom hover:text-gray-500 dark:text-gray-light underline dark:hover:text-gray-200 transition-all duration-200" %>
+    <% if user_signed_in? && current_user.admin? %>
+      <%= link_to "Edit", edit_error_path(@error), class: "text-xl text-gray-custom hover:text-gray-500 dark:text-gray-light underline dark:hover:text-gray-200 transition-all duration-200" %>
+    <% end %>
   </div>
   <%= render partial: "card", locals: { error: @error } %>
   <p class="text-gray-custom dark:text-white mt-4 mb-8">
