--- a/app/views/errors/_card.html.erb
+++ b/app/views/errors/_card.html.erb
@@ -18,9 +18,14 @@
     </p>
   </div>
 
-  <div>
+  <div class="my-6">
     <h3 class="text-gray-custom dark:text-white font-bold text-xl">Solution</h3>
     <div class="text-gray-custom dark:text-white font-code rounded text-sm" data-controller="syntax-highlighter" data-syntax-highlighter-content-value="<%= error.resolver %>">
     </div>
+  </div>
+
+  <div>
+    <h3 class="text-gray-custom dark:text-white font-bold text-lg">Keywords</h3>
+    <p class="text-gray-custom dark:text-white text-sm"><%= error.tags.pluck(:name).join(", ") %></p>
   </div>
 </div>
