--- a/app/views/errors/new.html.erb
+++ b/app/views/errors/new.html.erb
@@ -35,5 +35,10 @@
         <div data-preview-text-editor-target="preview" class="text-gray-custom dark:text-white" style="width: "></div>
       </div>
     </div>
+    <p class="mt-4">
+      <b>NOTE:</b> Resolvers will not be shown by default, it will have to be approved by an admin first in order to be shown in the app.<br />
+      This is done to avoid spam or unwanted content. If you've waited quite a bit of time for your error to be shown in the app,<br />
+      <%= link_to "please contact an admin here", links[:bug], class: "text-gray-custom dark:text-gray-light hover:text-gray-500 dark:hover:text-gray-200 underline transition-all duration-200", target: :_blank %>
+    </p>
   </div>
 </div>
