add feature to accept/reject errors

--- a/app/views/errors/_card.html.erb
+++ b/app/views/errors/_card.html.erb
@@ -28,4 +28,11 @@
     <h3 class="text-gray-custom dark:text-white font-bold text-lg">Keywords</h3>
     <p class="text-gray-custom dark:text-white text-sm"><%= error.tags.pluck(:name).join(", ") %></p>
   </div>
+
+  <% if user_signed_in? && current_user.admin? && error.pending? %>
+    <div class="mt-8 flex gap-2">
+      <%= button_to "Accept", accept_admin_error_path(error), method: :patch, class: "transition-all duration-250 rounded px-4 py-1 text-lg bg-white text-gray-custom hover:bg-slate-200" %>
+      <%= button_to "Reject", reject_admin_error_path(error), method: :patch, class: "transition-all duration-250 rounded px-4 py-1 text-lg border text-white hover:bg-slate-200 hover:text-gray-custom" %>
+    </div>
+  <% end %>
 </div>
