--- a/app/views/errors/_card.html.erb
+++ b/app/views/errors/_card.html.erb
@@ -26,7 +26,11 @@
 
   <div>
     <h3 class="text-gray-custom dark:text-white font-bold text-lg">Keywords</h3>
-    <p class="text-gray-custom dark:text-white text-sm"><%= error.tags.pluck(:name).join(", ") %></p>
+    <p class="text-gray-custom dark:text-white text-sm">
+      <% error.tags.select(:name).pluck(:name).each do |tag| %>
+        <span class="rounded-full bg-black text-white py-1 px-2 font-bold shadow"><%= tag %></span>
+      <% end %>
+    </p>
   </div>
 
   <% if user_signed_in? && current_user.admin? && error.pending? %>
